src/objects/Offer_Incentive_Blackout__c.object
<CustomObject>
    <description>Offer Incentive Blackout dates and times</description>
    <fields>
        <fullName>Blackout_Date__c</fullName>
        <label>Blackout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Blackout_End_Hour__c</fullName>
        <globalPicklist>Hour</globalPicklist>
        <label>Blackout End Hour</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Blackout_End_Minute__c</fullName>
        <globalPicklist>Minute_Offer</globalPicklist>
        <label>Blackout End Minute</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Blackout_Start_Hour__c</fullName>
        <globalPicklist>Hour</globalPicklist>
        <label>Blackout Start Hour</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Blackout_Start_Minute__c</fullName>
        <globalPicklist>Minute_Offer</globalPicklist>
        <label>Blackout Start Minute</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offer_Incentive_Dynamic_Configuration__c</fullName>
        <label>Offer Incentive Dynamic Configuration</label>
        <referenceTo>Offer_Incentive_Dynamic_Configuration__c</referenceTo>
        <relationshipLabel>Offer Incentive Blackout</relationshipLabel>
        <relationshipName>Offer_Incentive_Blackout</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Offer Incentive Blackout</label>
    <nameField>
        <displayFormat>OIB-{0000000000}</displayFormat>
        <label>Offer Incentive Blackout Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offer Incentive Blackout</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>